사람 수정 스트림 버전